--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<img class="moreIndicator rot90" src="img/more.png" alt="More Content"/>
       </div>
       <div id="nav">
-        <img id="prevPhoto" class='rot180' src="img/arrow.png" alt="Previous Photo"/>
+        <img id="prevPhoto" src="img/arrow.png" alt="Previous Photo"/>
         <img id="nextPhoto" src="img/arrow.png" alt="Next Photo"/>
       </div>
       <div class="details">
